# file_fetcher

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.override.yml  docker-compose.yml  files_to_download.txt  package.json  pyproject.toml  run.sh  tailwind.config.js
alembic/: env.py
alembic/versions/: 08cd8a0bf34f_001_initial_schema.py  0c47009f40e3_002_remote_files.py  a1b2c3d4e5f6_003_omdb_data.py  a1b2c3d4e5f7_009_settings_table.py  b1c2d3e4f5a6_010_override_omdb_id.py  b2c3d4e5f6a7_004_omdb_status_to_movies.py  c3d4e5f6a7b8_005_poster_blobs_to_omdb_data.py  d4e5f6a7b8c9_006_omdb_status_to_shows.py  e5f6a7b8c9d0_007_local_files.py  f6a7b8c9d0e1_008_download_queue.py
src/file_fetcher/: __init__.py  __main__.py  app_runner.py  bootstrap.py  config.py  db.py  progress.py  ratings.py  report.py  scanner.py  scheduler.py  sftp_client.py  title_parser.py  watcher_runner.py
src/file_fetcher/agent/: __init__.py  agent.py  tools.py
src/file_fetcher/cli/: delete.py  enrich.py  override.py  queue_cmd.py  scan.py  search.py  settings_cmd.py
src/file_fetcher/llm/: base.py  gemini_provider.py  ollama_provider.py
src/file_fetcher/models/: __init__.py  base.py  download_queue.py  enums.py  local_file.py  movie.py  omdb_data.py  remote_file.py  setting.py  show.py
src/file_fetcher/schemas/: __init__.py  catalog.py
src/file_fetcher/services/: catalog.py  download_service.py  enrichment.py  queue_service.py  scanner_service.py  settings_service.py  watcher_service.py
src/file_fetcher/web/: app.py  utils.py
tests/: conftest.py  test_agent.py  test_app_runner.py  test_config.py  test_llm.py  test_omdb.py  test_ratings.py  test_scanner.py  test_scheduler.py  test_sftp_client.py  test_title_parser.py
tests/cli/: test_delete_cli.py  test_enrich_cli.py  test_queue_cmd.py  test_scan.py  test_search.py
tests/models/: test_enums.py  test_movie.py  test_show.py
tests/services/: test_catalog.py  test_catalog_delete.py  test_download_service.py  test_enrichment.py  test_queue_service.py  test_scanner_service.py  test_settings_service.py  test_watcher_service.py
tests/web/: conftest.py  test_app.py  test_catalog_grid.py  test_delete_reset.py  test_grid_api.py  test_override_enrich.py  test_queue_api.py  test_queue_page.py  test_queue_polling.py  test_settings_page.py  test_title_detail.py  test_toast.py
(+23 files in other folders)
